--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,73 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+}
+
+.container {
+	max-width: 1280px;
+	margin: 0 auto;
+	padding: 0 15px;
+	box-sizing: content-box;
+}
+.box {
+	display: flex;
+	justify-content: center;
+	padding: 100px 0;
+}
+.form {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	gap: 25px;
+
+	width: 320px;
+
+	padding: 40px 30px 50px;
+	background: #fff;
+	border-radius: 12px;
+
+	color: #212121;
+	box-sizing: border-box;
+
+	box-shadow: 0px 0px 15px #181818;
+}
+.title {
+	margin: 0;
+}
+.form-content {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+
+	width: 100%;
+}
+.label {
+	display: flex;
+	flex-direction: column;
+	gap: 3px;
+}
+.label input {
+	outline: none;
+	border-radius: 7px;
+	padding: 10px 18px;
+
+	transition: 0.1s ease-in-out;
+}
+.label input:focus {
+	border: 2px solid coral;
+}
+
+.btn {
+	font-size: 16px;
+
+	padding: 10px 0;
+	margin-top: 5px;
+
+	border: none;
+	outline: none;
+	border-radius: 7px;
+
+	cursor: pointer;
+	transition: 0.1s ease-in-out;
+}
+.btn:hover {
+	background: coral;
 }
